// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="comment-content"
>
  <div>
    <ChangesHistory />
    <p
      className="comment-text"
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
    />
  </div>
  <p
    className="option-edit"
  >
    <Button
      buttonParams={
        Object {
          "commentId": undefined,
          "whowasvoted": undefined,
        }
      }
    />
    <Button
      buttonId="comment__undefinedundefined"
      buttonParams={
        Object {
          "commentId": undefined,
          "whowasvoted": undefined,
        }
      }
    />
    <Button
      buttonId="comment_vote_to_delete_undefinedundefined"
      buttonParams={
        Object {
          "commentId": undefined,
          "whowasvoted": undefined,
        }
      }
      show={true}
    />
  </p>
</div>
`;

exports[` 2`] = `
<div
  className="save-edited-form"
>
  <Connect(ReduxForm)
    form="app_ViewQuestion_SAVE_COMMENT_FORM_undefinedundefined"
    submitButtonId="app_ViewQuestion_SAVE_COMMENT_BUTTON"
  />
</div>
`;

exports[`Comments CommentVision answerid != item.answerId && commentid != item.id 1`] = `
<CommentView
  answerId={11111}
  editCommentState={
    Object {
      "answerid": 1,
      "commentid": 1,
    }
  }
  id={11111}
/>
`;

exports[`Comments CommentVision answerid == item.answerId && commentid == item.id 1`] = `
<CommentEdit
  answerId={1}
  editCommentState={
    Object {
      "answerid": 1,
      "commentid": 1,
    }
  }
  id={1}
/>
`;

exports[`Comments test1, Comments 1`] = `
<div
  className="comments"
>
  <Comment
    comments={
      Array [
        Object {
          "id": 1,
          "userInfo": Object {},
        },
        Object {
          "id": 2,
          "userInfo": Object {},
        },
      ]
    }
    id={1}
    userInfo={Object {}}
  />
  <Comment
    comments={
      Array [
        Object {
          "id": 1,
          "userInfo": Object {},
        },
        Object {
          "id": 2,
          "userInfo": Object {},
        },
      ]
    }
    id={2}
    userInfo={Object {}}
  />
</div>
`;

exports[`Comments test2, Comment 1`] = `
<div
  className="comment-body"
>
  <UserInfo />
  <CommentVision
    userInfo={Object {}}
  />
</div>
`;
